--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h3>Attractions</h3>
         <div class="grid-container">
           <article class="card">
-            <p><img src="img/Islands.jpg" style="width: 100%" /></p>
+            <p><img src="img/Islands.jpg" alt="sea" style="width: 100%" /></p>
             <div class="container">
               <h3><b>Phi Phi Islands</b></h3>
               <p>
@@ -37,7 +37,7 @@
             </div>
           </article>
           <article class="card">
-            <p><img src="img/Tower.jpg" style="width: 100%" /></p>
+            <p><img src="img/Tower.jpg" alt="tower" style="width: 100%" /></p>
             <div class="container">
               <h2><i>Eiffel Tower</i></h2>
               <p>
