--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <article class="card">
             <p><img src="img/Islands.jpg" alt="sea" style="width: 100%" /></p>
             <div class="container">
-              <h3><b>Phi Phi Islands</b></h3>
+              <h3><strong>Phi Phi Islands</strong></h3>
               <p>
                 Phi Phi Islands are a group of islands in Thailand between the
                 large island of Phuket and the Malacca Coastal Strait of
