--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h3>Attractions</h3>
         <div class="grid-container">
           <article class="card">
-            <p><img src="img/Islands.jpg" alt="sea" style="width: 100%" /></p>
+            <p><img src="img/Islands.jpg" alt="Sea" style="width: 100%" /></p>
             <div class="container">
               <h3><strong>Phi Phi Islands</strong></h3>
               <p>
@@ -37,9 +37,9 @@
             </div>
           </article>
           <article class="card">
-            <p><img src="img/Tower.jpg" alt="tower" style="width: 100%" /></p>
+            <p><img src="img/Tower.jpg" alt="Tower" style="width: 100%" /></p>
             <div class="container">
-              <h2><i>Eiffel Tower</i></h2>
+              <h2><strong>Eiffel Tower</strong></h2>
               <p>
                 Eiffel Tower is one of the most famous structures in the world.
                 Eiffel Tower is named after a leading French architect and
@@ -51,9 +51,9 @@
             </div>
           </article>
           <article class="card">
-            <p><img src="img/Square.jpg" style="width: 100%" /></p>
+            <p><img src="img/Square.jpg" alt="Square" style="width: 100%" /></p>
             <div class="container">
-              <h1><b>Times Square</b></h1>
+              <h1><strong>Times Square</strong></h1>
               <p>
                 Times Square has become a global landmark and has become a
                 symbol of New York City. This is a result of Times Square being
