--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <article class="card">
             <p><img src="img/Square.jpg" alt="Square" style="width: 100%" /></p>
             <div class="container">
-              <h1><strong>Times Square</strong></h1>
+              <h1>Times Square</h1>
               <p>
                 Times Square has become a global landmark and has become a
                 symbol of New York City. This is a result of Times Square being
