--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
       <nav>
         <ul>
-          <li><a href="./index.html" target="_blank">Home</a></li>
-          <li><a href="./articles.html" target="_blank">Articles</a></li>
-          <li><a href="./contact.html" target="_blank">Contact</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./articles.html">Articles</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -68,8 +68,8 @@
         </div>
       </section>
       <section>
-        <h3>Contact Me Live Code</h3>
         <h1>Send and email to melivecode@gmail.com</h1>
+        <h3>Contact Me Live Code</h3>
       </section>
     </main>
   </body>
