--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
       <nav>
         <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./articles.html">Articles</a></li>
-          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="./index.html" target="_self">Home</a></li>
+          <li><a href="./articles.html" target="_self">Articles</a></li>
+          <li><a href="./contact.html" target="_self">Contact</a></li>
         </ul>
       </nav>
     </header>
